# mcp-file-agent

./: .dockerignore  .env.example  .env.openai.example  .gitignore  Dockerfile  README.md  SKILL.md  docker-compose.yml  install.py  pyproject.toml  requirements.txt
data/samples/zoology/: coral_reef_observations.docx  field_notes_borneo.txt  overview.txt  species_count_2024.xls
data/samples/zoology/birds/: species_catalog.xls
data/samples/zoology/mammals/: elephant_facts.txt
data/samples/zoology/marine/: cetaceans.docx
data/samples/zoology/reptiles/: gecko_notes.txt
deploy/: file-search-agent.service.example
docs/: COMPLIANCE_REPORT.md  DEPLOYMENT.md  INSTRUCTIONS_FOR_ABIN.md  LLM_PROVIDER_GUIDE.md  OPERATIONS.md  PROJECT_OVERVIEW.md  README.md  SUBMISSION_EMAIL_TO_ABIN.html  SUBMISSION_EMAIL_TO_ABIN.md  TROUBLESHOOTING.md
scripts/: e2e_verify.py  generate_samples.py  production_gate.py  spotcheck_assignment.py
src/file_search_agent/: __init__.py  __main__.py  agent_factory.py  config.py  main.py  models.py  output_guard.py  routing.py
src/file_search_agent/mcp/: local_file_search.py
tests/: test_agent_factory.py  test_agent_routing.py  test_learn_mcp.py  test_local_mcp.py  test_output_guard.py  test_security.py
