[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-search-agent"
version = "0.1.0"
description = "LangChain CLI agent with local file search and Microsoft Learn MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "xlwt>=1.3.0",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/e2e_verify.py" = ["E402"]

[project.scripts]
file-search-agent = "file_search_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
